feat: change projects content

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="My portfolio website written in pure html and minified to just ~10 KBs of data">
         <link rel="stylesheet" href="./_minified.css">
-        <title>Portfolio @ notwindstone</title>
+        <title>Portfolio @notwindstone</title>
     </head>
     <body>
         <header style="margin:0">
@@ -111,13 +111,17 @@
                     <li><a href="https://tanstack.com/query/latest" target="_blank">tanstack query</a> (async state manager mainly used for fetching)</li>
                     <li><a href="https://orm.drizzle.team/" target="_blank">drizzle orm</a> (typesafe sql query builder)</li>
                 </ul>
-                <h3>Things I tried</h3>
+                <h3>Things I have tried</h3>
                 <ul>
+                    <li>dart</li>
                     <li>kotlin</li>
                     <li>java</li>
                     <li><a href="https://nuxt.com/" target="_blank">nuxt</a> (typescript, fullstack framework)</li>
                     <li><a href="https://unocss.dev/" target="_blank">unocss</a> (css framework)</li>
                     <li><a href="https://mantine.dev/" target="_blank">mantine ui</a> (typescript, ui kit)</li>
+                    <li><a href="https://v2.tauri.app/" target="_blank">tauri</a> (typescript & rust, framework for cross-platform applications)</li>
+                    <li><a href="https://developer.android.com/compose" target="_blank">jetpack compose</a> (kotlin, android's toolkit)</li>
+                    <li><a href="https://flutter.dev/" target="_blank">flutter</a> (dart, framework for cross-platform applications)</li>
                 </ul>
             </article>
         `
@@ -133,7 +137,9 @@
                 </blockquote>
                 <p>Website: <a href="https://zen-auth.vercel.app/" target="_blank">zen-auth.vercel.app</a></p>
                 <p>Source: <a href="https://github.com/notwindstone/zen-auth" target="_blank">github.com/notwindstone/zen-auth</a></p>
-                <img src="./assets/zen-auth-home.webp" alt="Zen Auth home screen">
+                <a href="https://zen-auth.vercel.app/" target="_blank">
+                    <img style="aspect-ratio:1864/995;height:auto;max-width:100%" width="1864" height="995" src="./assets/zen-auth-home.webp" alt="Zen Auth home screen">
+                </a>
             </article>
             <article>
                 <h3>Freesm Launcher website <span style="opacity:50%">- Dec 30, 2024</span></h3>
@@ -146,7 +152,7 @@
                 <p>Website: <a href="https://website-freesmlauncher.vercel.app/" target="_blank">website-freesmlauncher.vercel.app</a></p>
                 <p>Source: <a href="https://github.com/notwindstone/website-freesmlauncher" target="_blank">github.com/notwindstone/website-freesmlauncher</a></p>
                 <a href="https://website-freesmlauncher.vercel.app/" target="_blank">
-                    <img src="./assets/freesmlauncher-website-home.webp" alt="Freesmlauncher website home screen">
+                    <img style="aspect-ratio:1852/995;height:auto;max-width:100%" width="1852" height="995" src="./assets/freesmlauncher-website-home.webp" alt="Freesmlauncher website home screen">
                 </a>
             </article>
             <article>
@@ -163,8 +169,11 @@
                 <blockquote>
                     note: this is my second programming project, which is currently the largest (due to my weak knowledge it has many flaws)
                 </blockquote>
-                <p>Source: <a href="" target="_blank"></a></p>
-                <img src="./assets/anisun-home.webp" alt="Anisun home screen">
+                <p>Website: <a href="https://anisun.vercel.app/" target="_blank">anisun.vercel.app</a></p>
+                <p>Source: <a href="https://github.com/notwindstone/anisun" target="_blank">github.com/notwindstone/anisun</a></p>
+                <a href="https://anisun.vercel.app/" target="_blank">
+                    <img style="aspect-ratio:1864/995;height:auto;max-width:100%" width="1864" height="995" src="./assets/anisun-home.webp" alt="Anisun home screen">
+                </a>
             </article>
             <article>
                 <h3>Keyboard wiki <span style="opacity:50%">- Mar 8, 2024</span></h3>
@@ -177,21 +186,27 @@
                 <blockquote>
                     note: this is my first huge programming project
                 </blockquote>
-                <p>Source: <a href="" target="_blank"></a></p>
-                <img src="./assets/keyboard-wiki-home.webp" alt="Keyboard wiki home screen">
+                <p>Website: <a href="https://keyboard-wiki.vercel.app/" target="_blank">keyboard-wiki.vercel.app</a></p>
+                <p>Source: <a href="https://github.com/notwindstone/keyboard-wiki" target="_blank">github.com/notwindstone/keyboard-wiki</a></p>
+                <a href="https://keyboard-wiki.vercel.app/" target="_blank">
+                    <img style="aspect-ratio:1852/995;height:auto;max-width:100%" width="1852" height="995" src="./assets/keyboard-wiki-home.webp" alt="Keyboard wiki home screen">
+                </a>
             </article>
             <hr>
             <h2>Maintaining these</h2>
             <article>
-                <h3>Freesm Launcher</h3>
+                <h3>Freesm Launcher <span style="opacity:50%">- Jul 10, 2024</span></h3>
                 <p>
                     Customized Prism Launcher fork aimed to provide a free way to play Minecraft.
                 </p>
                 <blockquote>
                     tech stack: qt, c++
                 </blockquote>
-                <p>Source: <a href="" target="_blank"></a></p>
-                <img src="./assets/freesmlauncher-home.webp" alt="Freesm Launcher home screen">
+                <p>Downloads: <a href="https://website-freesmlauncher.vercel.app/en/downloads" target="_blank">website-freesmlauncher.vercel.app/en/downloads</a></p>
+                <p>Source: <a href="https://github.com/FreesmTeam/FreesmLauncher" target="_blank">github.com/FreesmTeam/FreesmLauncher</a></p>
+                <a href="https://website-freesmlauncher.vercel.app/en/downloads" target="_blank">
+                    <img style="aspect-ratio:1117/780;height:auto;max-width:100%" width="1117" height="780" src="./assets/freesmlauncher-home.webp" alt="Freesm Launcher home screen">
+                </a>
             </article>
         `
         var contactPage = `
