feat: improve styles

--- a/src/index.html
+++ b/src/index.html
@@ -119,29 +119,29 @@ Hello! I'm an 18 year old <span style="color:var(--accent-color)">fullstack type
 <ul>
 <li>typescript</li>
 <li>go</li>
-<li><a href="https://nextjs.org/" target="_blank">next.js</a> (typescript, fullstack framework)
+<li><a href="https://nextjs.org/" target="_blank">next.js</a><span>(typescript, fullstack framework)</span>
 </li>
-<li><a href="https://elysiajs.com/" target="_blank">elysia.js</a> (typescript, backend framework)</li>
-<li><a href="https://wails.io/" target="_blank">wails.js</a> (typescript & go, framework for desktop applications)</li>
+<li><a href="https://elysiajs.com/" target="_blank">elysia.js</a><span>(typescript, backend framework)</span></li>
+<li><a href="https://wails.io/" target="_blank">wails.js</a><span>(typescript & go, framework for desktop applications)</span></li>
 </ul>
 <h3>I have the most experience in</h3>
 <ul>
-<li><a href="https://nextjs.org/" target="_blank">next.js</a> (typescript, fullstack framework)</li>
-<li><a href="https://tailwindcss.com/" target="_blank">tailwindcss</a> (css framework)</li>
-<li><a href="https://tanstack.com/query/latest" target="_blank">tanstack query</a> (async state manager mainly used for fetching)</li>
-<li><a href="https://orm.drizzle.team/" target="_blank">drizzle orm</a> (typesafe sql query builder)</li>
+<li><a href="https://nextjs.org/" target="_blank">next.js</a><span>(typescript, fullstack framework)</span></li>
+<li><a href="https://tailwindcss.com/" target="_blank">tailwindcss</a><span>(css framework)</span></li>
+<li><a href="https://tanstack.com/query/latest" target="_blank">tanstack query</a><span>(async state manager mainly used for fetching)</span></li>
+<li><a href="https://orm.drizzle.team/" target="_blank">drizzle orm</a><span>(typesafe sql query builder)</span></li>
 </ul>
 <h3>Things I have tried</h3>
 <ul>
 <li>dart</li>
 <li>kotlin</li>
 <li>java</li>
-<li><a href="https://nuxt.com/" target="_blank">nuxt</a> (typescript, fullstack framework)</li>
-<li><a href="https://unocss.dev/" target="_blank">unocss</a> (css framework)</li>
-<li><a href="https://mantine.dev/" target="_blank">mantine ui</a> (typescript, ui kit)</li>
-<li><a href="https://v2.tauri.app/" target="_blank">tauri</a> (typescript & rust, framework for cross-platform applications)</li>
-<li><a href="https://developer.android.com/compose" target="_blank">jetpack compose</a> (kotlin, android's toolkit)</li>
-<li><a href="https://flutter.dev/" target="_blank">flutter</a> (dart, framework for cross-platform applications)</li>
+<li><a href="https://nuxt.com/" target="_blank">nuxt</a><span>(typescript, fullstack framework)</span></li>
+<li><a href="https://unocss.dev/" target="_blank">unocss</a><span>(css framework)</span></li>
+<li><a href="https://mantine.dev/" target="_blank">mantine ui</a><span>(typescript, ui kit)</span></li>
+<li><a href="https://v2.tauri.app/" target="_blank">tauri</a><span>(typescript & rust, framework for cross-platform applications)</span></li>
+<li><a href="https://developer.android.com/compose" target="_blank">jetpack compose</a><span>(kotlin, android's toolkit)</span></li>
+<li><a href="https://flutter.dev/" target="_blank">flutter</a><span>(dart, framework for cross-platform applications)</span></li>
 </ul>
 </article>
         `
