docs: update docs info

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A portfolio website written in pure html and minified to just ~10 KBs of code">
 
-        <link rel="stylesheet" href="./_minified.css">
+        <link rel="stylesheet" href="./mi.css">
         <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 
         <title>Portfolio @notwindstone</title>
